--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
-    "react-scripts": "2.1.5"
+    "react-loadable": "^5.5.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.5",
+    "recharts": "^1.5.0",
+    "tabler-react": "^1.28.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "deploy-dev": "yarn build && cd build && mv index.html 200.html && surge",
+    "build": "react-scripts build &&  sw-precache --root='build/' --static-file-globs='build/**/!(*map*)' && gzip -r -9k build/static/js && gzip -r -9k build/static/css",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
