--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.8.2",
+    "react-currency-formatter": "^1.1.0",
     "react-dom": "^16.8.2",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^4.3.1",
