--- a/functions/package.json
+++ b/functions/package.json
@@ -10,8 +10,10 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "camelcase": "^5.0.0",
     "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.2.0"
+    "firebase-functions": "^2.2.0",
+    "glob": "^7.1.3"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
