--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "deploy-dev": "yarn build && cd build && mv index.html 200.html && surge",
+    "hosting-deploy": "yarn build && firebase deploy --only hosting",
     "build": "react-scripts build &&  sw-precache --root='build/' --static-file-globs='build/**/!(*map*)' && gzip -r -9k build/static/js && gzip -r -9k build/static/css",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "functions-serve": "firebase serve --only functions",
+    "functions-shell": "firebase functions:shell",
+    "functions-start": "npm run shell",
+    "functions-deploy": "firebase deploy --only functions"
   },
   "eslintConfig": {
     "extends": "react-app"
